# endstone

./: .clang-format  .clang-tidy  .clangd  .conanrc  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  README.md  ROADMAP.md  autoinstall.sh  conan_provider.cmake  conanfile.py  docker-compose.yml  docker-entrypoint.sh  index.html  manifest.json  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  stable  start.sh  versions.json  xmake.lua
endstone_api/: CMakeLists.txt
endstone_api/include/bedrock/: core.h  server_instance.h  type_id.h  uuid.h
endstone_api/include/endstone/: logger.h  server.h
endstone_core/: CMakeLists.txt
endstone_core/include/endstone_core/: endstone_server.h
endstone_core/src/endstone_core/: endstone_server.cpp  logger_factory.cpp
endstone_core/test/: test_logger.cpp
endstone_python/: .gitignore  CMakeLists.txt
endstone_python/include/endstone_python/: endstone_python.h
endstone_python/python/endstone/: __init__.py  __init__.pyi  logger.py  plugin.py  plugin.pyi  server.py  server.pyi
endstone_python/src/endstone_python/: endstone_python.cpp  logger.cpp  server.cpp
endstone_python/test/: test_endstone.py  test_imports.py  test_plugin_description.py
endstone_runtime/: CMakeLists.txt
endstone_runtime/include/endstone_runtime/: hook.h  internals.h  platform.h  python_plugin_loader.h  symbol_handler.h
endstone_runtime/src/bedrock/: bedrock_log.cpp  command_registry.cpp  common.cpp  dedicated_server.cpp  server_instance.cpp  stop_command.cpp  type_id.cpp
endstone_runtime/src/endstone_runtime/: dllmain.cpp  hook.cpp  hook_error.cpp  main.cpp  platform_linux.cpp  platform_windows.cpp
include/: CMakeLists.txt
include/bedrock/: automatic_id.h  bedrock.h  bedrock_log.h  callstack.h  common_types.h  core.h  details.h  error_info.h  forward.h  gameplay_handler.h  hashed_string.h  i18n.h  mce.h  memory.h  minecraft.h  minecraft_app_interface.h  result.h  shared_ptr.h  social.h  threading.h  type_id.h  uuid.h
include/bedrock/actor/: actor.h  actor_manager.h  entity_context.h  entity_registry.h  mob.h  owner_ptr.h  owner_storage.h  permissions_handler.h  player.h  server_player.h
include/bedrock/certificates/: certificate.h  extended_certificate.h  unverified_certificate.h  web_token.h
include/bedrock/command/: command.h  command_context.h  command_flag.h  command_origin.h  command_origin_data.h  command_origin_identity.h  command_origin_loader.h  command_output.h  command_output_sender.h  command_permission_level.h  command_position.h  command_registry.h  command_utils.h  command_version.h  minecraft_commands.h  stop_command.h
include/bedrock/common/: app_platform_listener.h  minecraft.h  (+2 more)
include/endstone/: chat_color.h  chat_colors.h  check.h  color_format.h  common.h  detail.h  dimension.h  endstone.h  endstone.hpp  game_mode.h  identifier.h  internal.h  level.h  logger.h  message.h  namespaced_key.h  object.h  offline_player.h  player.h  registry.h  server.h  skin.h  translatable.h  variant.h  version.h  version.h.in
include/endstone_python/: endstone_python.h
include/endstone_runtime/: hook.h  platform.h
include/imgui/: imgui_file_browser.h  imgui_impl_opengl3.h
lib/: CMakeLists.txt
lib/include/: common.h  endstone.h  endstone_py.h  hook_error.h  hook_manager.h  logger.h  plugin.h  plugin_manager.h  server.h
lib/src/: dllmain.cpp  endstone.cpp  server.cpp
plugins/devtools/: README.md  pyproject.toml
src/: CMakeLists.txt
src/bedrock/: CMakeLists.txt  app_platform_listener.h  bedrock.h  bedrock_common.h  bedrock_log.h  bedrock_types.h  command_context.h  command_origin.h  command_registry.h  common_types.h  dedicated_server.h  forward.h  game_version.h  i18n.h  internal.h  minecraft_app_interface.h  minecraft_commands.h  server_instance.h  shared_constants.cpp  shared_constants.h  shared_ptr.h  symbol.h
src/endstone/: endstone.cpp  endstone.h  endstone_server.cpp  endstone_server.h  logger_factory.cpp  logger_factory.h  server.cpp  versioning.cpp  versioning.h
src/endstone_core/: CMakeLists.txt  endstone_server.cpp  gameplay_handler.cpp  gameplay_handler_adapter.cpp  level.cpp  logger_factory.cpp  message.cpp  player.cpp  server.cpp
src/endstone_devtools/: devtools.cpp  devtools_command.cpp  vanilla_data.cpp
src/endstone_python/: CMakeLists.txt  actor.cpp  ban.cpp  block.cpp  boss.cpp  color_format.cpp  command.cpp  endstone_python.cpp  event.cpp  form.cpp  forward.h  inventory.cpp  lang.cpp  level.cpp  logger.cpp  network.cpp  permissions.cpp  plugin.cpp  scheduler.cpp  scordboard.cpp  scoreboard.cpp  server.cpp  util.cpp
src/endstone_runtime/: CMakeLists.txt  crash_handler.cpp  hook.cpp  loader.cpp  magic.cpp  main.cpp  runtime_loader.cpp  sentry_handler.cpp  signal_handler.cpp
src/imgui/: imgui_impl_glfw.cpp
src/levi/: memory_operators.cpp
src/lib/: dllmain.cpp  sym.h
src/pybind/: _chat_color.cpp  _command.cpp  _logger.cpp  _permission.cpp  _plugin.cpp  _server.cpp  pybind.cpp  pybind.h
tests/: CMakeLists.txt  mocks.h  test_base64.cpp  test_command_lexer.cpp  test_command_usage_parser.cpp  test_cpp_plugin_loader.cpp  test_endstone_server.cpp  test_event.py  test_logger.cpp  test_logger_factory.cpp  test_nbt.cpp  test_nbt.py  test_object.cpp  test_player_ban_list.cpp  test_plugin.cpp  test_pointers.cpp  test_scheduler.cpp  test_skin.py  test_thread_pool_executor.cpp  test_uuid.cpp
tests/ban/: test_player_ban_list.cpp
tests/bedrock/: test_actor_definition_identifier.cpp  test_binary_stream.cpp  test_block_pos.cpp  test_check.cpp  test_function_ref.cpp  test_hashed_string.cpp  test_sem_version.cpp  test_spin_lock.cpp  test_static_optimized_string.cpp  test_uuid.cpp
tests/endstone/: chat_color_test.cpp  logger_factory_test.cpp
tests/endstone_test/: README.md  pyproject.toml  pytest.toml
tests/plugin/: test_cpp_plugin_loader.cpp
tests/scheduler/: test_scheduler.cpp
tests/util/: test_uuid.cpp  test_vector.cpp
(+32166 files in other folders)
