[build-system]
requires = ["conan-py-build"]
build-backend = "conan_py_build.build"

[project]
name = "endstone"
authors = [{ name = "Vincent Wu", email = "magicdroidx@gmail.com" }]
description = "Endstone offers a plugin API for Bedrock Dedicated Servers, supporting both Python and C++."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["plugin", "python", "minecraft", "bedrock"]
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "aiohttp",
    "asyncio",
    "click",
    "colorlog",
    "importlib-metadata",
    "importlib-resources",
    "lazy-loader",
    "numpy",
    "packaging",
    "pip",
    "pkginfo",
    "psutil",
    "pyyaml",
    "requests",
    "rich",
    "tomlkit",
    "typing-extensions",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["endstone-stubgen", "pytest"]

[project.urls]
Changelog = "https://endstone.dev/latest/changelog"
Discussions = "https://github.com/orgs/EndstoneMC/discussions"
Documentation = "https://endstone.dev"
Homepage = "https://github.com/EndstoneMC/endstone"
Issues = "https://github.com/EndstoneMC/endstone/issues"

[project.scripts]
endstone = "endstone.cli:main"

[tool.conan-py-build]
extra-arguments = [
    "-s=&:build_type=RelWithDebInfo",
    "-c=tools.build:skip_test=True",
]

[tool.conan-py-build.wheel]
packages = ["endstone"]

[tool.conan-py-build.version]
provider = "setuptools_scm"

[tool.setuptools_scm]
version_file = "endstone/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--ignore=tests/endstone_test"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "F"]

[tool.cibuildwheel]
skip = ["pp*"]
test-command = "pytest {package}/tests --ignore={package}/tests/endstone_test"
test-requires = "pytest"
repair-wheel-command = [
    "pip install uv",
    'uv run --script scripts/repair_wheel.py -o endstone -p endstone -w {dest_dir} {wheel}',
]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "ghcr.io/endstonemc/manylinux_2_31_x86_64"
environment = { LLVM_VERSION = 20, CC = "/usr/bin/clang", CXX = "/usr/bin/clang++" }
before-all = [
    "apt-get update -y -q && apt-get install -y -q build-essential lsb-release wget software-properties-common gnupg",
    "wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && ./llvm.sh ${LLVM_VERSION}",
    "apt-get install -y -q libc++-${LLVM_VERSION}-dev libc++abi-${LLVM_VERSION}-dev clang-tools-${LLVM_VERSION}",
    "update-alternatives --install /usr/bin/clang clang /usr/bin/clang-${LLVM_VERSION} 100",
    "update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-${LLVM_VERSION} 100",
]
